# dpcpp-tutorial

./: README.md
count-min/: A10_oneapi_batch-fpga-profile.sh  A10_oneapi_batch-fpga.sh  CMakeLists.txt  README.md  S10_oneapi_batch-fpga.sh
count-min/src/: CMakeLists.txt  count-min.cpp  count_min_sketch.cpp  count_min_sketch.hpp  kafka-words-x2.txt  kafka-words.txt  multi_kernel.hpp  single_kernel.hpp
frequency-filter/: Makefile  Makefile.fpga
frequency-filter/src/: frequency-filter.cpp
frequency-filter/src/Utils/: bmp-utils.c  bmp-utils.h
image-conv/: CMakeLists.txt  Makefile  Makefile.fpga  README.md  sample.json
image-conv/src/: CMakeLists.txt  image-conv-buffers.cpp  image-conv-image.cpp  image-conv.cpp
image-conv/src/Utils/: CMakeLists.txt
matrix-multi/: A10_oneapi_batch-fpga-profile.sh  A10_oneapi_batch.sh  CMakeLists.txt  License.txt  Makefile  Makefile.fpga  README.md  S10_oneapi_batch-fpga-profile.sh  lab4-instructions.md
matrix-multi/src/: CMakeLists.txt  matrix-multi-buffers.cpp  matrix-multi-para-v1.cpp  matrix-multi-para-v2.cpp  matrix-multi-para.cpp  matrix-multi-st-v1.cpp  matrix-multi-st-v2.cpp  matrix-multi-st-v3.cpp
rolling-mean-filter/: CMakeLists.txt  README.md
rolling-mean-filter/output/: tmp.txt
rolling-mean-filter/src/: CMakeLists.txt  HostStreamer.hpp  buffered_host_streaming.cpp  common.hpp  kernel_defs.hpp  rolling-mean-filter.cpp  streaming_with_api.hpp  streaming_without_api.hpp
rolling-mean-filter/src/Utils/: CMakeLists.txt  bmp-utils.c  bmp-utils.h  gold.c  gold.h  utils.c  utils.h
sf-filter/: CMakeLists.txt  Makefile  Makefile.fpga  README.md
sf-filter/src/: CMakeLists.txt  Utils  sf-filter.cpp
sf-filter/src/PipeArray/: CMakeLists.txt
word-count/: A10_oneapi_batch-fpga-profile.sh  CMakeLists.txt  ISC21DevSummit.md  Makefile.fpga  README.md  S10_oneapi_batch-fpga-profile.sh
word-count/src/: CMakeLists.txt  word-count-v1.cpp  word-count.cpp
word_count/: Makefile
word_count/src/: CMakeLists.txt  word-count.cpp
